--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+ <img src="http://t1.gstatic.com/licensed-image?q=tbn:ANd9GcRCszg9HPX9NaiTrzOxi0Ge53ddHJy5X1qWGA-WIZ3v1_VmHWMztjbevN5NUH9oHd4rMtRhu6eK8ltjwhE" alt = "dog" width ="500">
 </body>
 
 </html>
